fix: update footer background color for improved visibility

--- a/src/css/como_adotar.css
+++ b/src/css/como_adotar.css
@@ -111,7 +111,7 @@ body {
 }
 
 footer {
-  background-color: #3d66cc;
+  background-color: #2c7abc;
   color: white;
   padding: 15px 0;
   text-align: center;
